Fix valign registration info box, inserito logo svg scalabile

--- a/static/m5s_bs.css
+++ b/static/m5s_bs.css
@@ -22,8 +22,14 @@ a {
 	margin-top: 60px;
 }
 
+.vtable {
+        display: table;
+        height: 100%;
+}
+
 .table-cell {
 	display: table-cell;
+        vertical-align: middle;
 }
 
 .inline-block {
@@ -85,9 +91,8 @@ a {
 }
 
 #m5s_logo {
-//	height: 70px;
-//	width: 70px;
-	max-width: 145px;
+	max-width: 150px;
+        width: 100%;
 }
 
 #parlamento_img {
